# softdocs

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  guide_conda.md  guide_jupyter.md  guide_pandas.ipynb  guide_pathlib.ipynb  guide_pathlib.md  guide_plotting.ipynb  guide_pyqgis.ipynb  guide_regex.ipynb  guide_x.md  index.md  make.bat  pandas.ipynb
src/softdocs/: __init__.py
tests/: test_softdocs.py
