[tool.poetry]
name = "softdocs"
version = "0.1.0"
description = "A package for containing documentation for commonly used software"
authors = ["Chris Bayne"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
