[tool.poetry]
name = "softdocs"
version = "0.1.0"
description = "A package for containing documentation for commonly used software"
authors = ["Chris Bayne"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = ">=2.3.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
